# webcamdemo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: smoke_test.py  test_backend_dshow_unit.py  test_backend_v4l2_unit.py  test_cli.py  test_hardware_integration.py  test_model.py  test_server_api.py
webcamdemo/: __init__.py  backend_dshow.py  backend_v4l2.py  cli.py  model.py  server.py
webcamdemo/static/: index.html
